--- a/_config.yml
+++ b/_config.yml
@@ -257,6 +257,7 @@ paginate: 5
 
 kramdown:
   input: GFM
+  math_engine: mathjax # you can also set this field to 'katex'
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
