--- a/_config.yml
+++ b/_config.yml
@@ -53,11 +53,11 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
 #  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
   github: itsadeepizza
 #  twitter: daattali
 #  patreon: DeanAttali
+  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
@@ -112,7 +112,7 @@ feed_show_tags: true
 post_search: true
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
-edit_page_button: true
+edit_page_button: false
 
 # Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
 # If this setting is off, then long sub-menu words might get cut off
@@ -120,7 +120,7 @@ edit_page_button: true
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
+keywords: "dmodel, pytorch, deep learning, neural network"
 
 ######################################
 # --- Colours / background image --- #
