--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,10 @@ navbar-links:
   Our Projects:
     - 4inarow: "projects/4inarow"
     - CycleGAN: "projects/cycleGAN"
-    - GNN: "projects/GNN"
+    - Graph NNs: "projects/GNN"
     - NLP: "projects/NLP"
     - Gesture Recognition: "projects/pose_estimation"
+    - Spiking NNS: "projects/SNN"
     - All projects: "projects"
   About Us: "aboutme"
   Resources: "resources"
