--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ navbar-links:
     - NLP: "projects/NLP"
     - Gesture Recognition: "projects/pose_estimation"
     - Spiking NNS: "projects/SNN"
+    - Variational AE: "projects/VAE"
     - All projects: "projects"
   About Us: "aboutme"
   Resources: "resources"
